--- a/signup.html
+++ b/signup.html
@@ -32,7 +32,7 @@
             </form>
         </div>
     </div>
-    <script src="index.js"></script>
+    <script src="js/nav.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
 </body>
 
