--- a/signup.html
+++ b/signup.html
@@ -28,6 +28,7 @@
                     <label>Enter your password</label>
                 </div>
                 <a href="#" id="paddingform">Forgot password?</a>
+                 <a href="index.html" id="paddingform">back?</a>
                 <button onclick="signup();" type="submit">Create Account</button>
             </form>
         </div>
